--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,7 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer:2.10.4'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+    //phone number library
+    api 'com.googlecode.libphonenumber:libphonenumber:8.8.0'
+
 }
